# AhuVista

./: .gitignore  LICENSE-DOCS-CC.md  LICENSE.md  Makefile  README.md
client/: LICENSE-LGPL.md  app.json  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/components/: Icons.tsx
client/src/: index.css  index.tsx
client/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  image.tsx  input.tsx  radio-group.tsx  select.tsx  text-field.tsx
client/src/routes/: index.tsx
rustml/: Cargo.toml
rustml/src/: lib.rs  main.rs  model.rs  processor.rs  training.rs  utils.rs
rusty-ml/: Cargo.toml  LICENSE-MODEL-RESEARCH.md
rusty-ml/src/: fusion.rs  main.rs  preprocessor.rs
rusty-ml/src/modalities/: mod.rs
rusty-ml/src/modalities/image/: model.rs  preprocessor.rs
rusty-ml/src/modalities/tabular/: model.rs  preprocessor.rs
rusty-ml/src/modalities/temporal/: mod.rs  model.rs  preprocessor.rs
rusty-ml/src/modalities/text/: model.rs  preprocessor.rs
rusty-ml/src/utils/: mod.rs  preprocessing.rs
server/: .env.example  Cargo.toml  Dockerfile  LICENSE-APGL.md  database.db  docker-compose.dev.yml  docker-compose.prod.yml  go.mod  go.sum  main.go
server/.sqlx/: query-a26c9d575a22a5cd5a10a8c8bd3951321a652d063ade13698f668fc3d53fa416.json  query-d7d273727a55ab83c778ef4a5ad74aa89e24306f5d295d9f1050c5c06f45f2f2.json
server/api/: handler.go  router.go
server/middleware/: middleware.go
server/migrations/: 20240918115400_init.down.sql  20240918115400_init.up.sql
server/model/: prediction.go
server/models/: prediction.go  schema.go
server/src/: config.rs  db.rs  main.rs  middleware.rs  schema.rs
server/src/models/: enums.rs  health_data.rs  message.rs  mod.rs  notification.rs  risk_assessment.rs  shared_access.rs  user.rs  user_profile.rs  wearable_device.rs
server/src/routes/: mod.rs  user_routes.rs
server/src/utils/: api_error.rs  hash.rs  mod.rs
server/utils/: auth.go  db.go
