[package]
name = "rustml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
clap = "4.5.9"
hf-hub = { version = "0.3.2", features = ["tokio"] }
lazy_static = "1.5.0"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
ndarray = "0.15.6"
rand = "0.8.5"
serde = "1.0.204"
serde_json = "1.0.120"
tokenizers = "0.19.1"
